--- a/config/content.htm
+++ b/config/content.htm
@@ -50,6 +50,15 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dLK8QT6gpw8" width="560"></iframe></p>
 <h1>發球機版本</h1>
 <h2>第1版</h2>
-<p><marquee behavior="alternate" direction="down" height="35" scrollamount="1"><a href="/downloads/組合件.stl">組合件.stl</a>|<a href="/downloads/球體.stl">球體.stl</a>|<a href="/downloads/主體.stl">主體.stl</a>|<a href="/downloads/球桶.stl">球桶.stl</a>|<a href="/downloads/引球圓盤.stl">引球圓盤.stl</a></marquee></p>
-<h2>第2版</h2>
-<p><marquee behavior="alternate" direction="up" height="30" scrollamount="1"><a href="/downloads/引球圓盤-2.stl">引球圓盤-2.stl</a>|<a href="/downloads/發球機主體-2.stl">發球機主體-2.stl</a></marquee></p>
+<p><marquee behavior="alternate" bgcolor="#FF8CFF" direction="left" scrollamount="1" width="350"><a href="/get_page/downloads/組合件.stl">組合件.stl</a>|<a href="/get_page/downloads/球體.stl">球體.stl</a>|<a href="/get_page/downloads/主體.stl">主體.stl</a>|<a href="/get_page/downloads/球桶.stl">球桶.stl</a>|<a href="/get_page/downloads/引球圓盤.stl">引球圓盤.stl</a></marquee></p><h2>第2版</h2>
+<p><marquee behavior="alternate" bgcolor="#FF5959" direction="up" height="35" scrollamount="1.5" width="300"><a href="/get_page/downloads/組合圖-2.stl">組合圖-2.stl</a>|<a href="/get_page/downloads/發球機主體-2.stl">發球機主體-2.stl</a>|<a href="/get_page/downloads/引球圓盤-2.stl">引球圓盤-2.stl</a></marquee></p>
+<p><a href="https://drive.google.com/file/d/1GsmMkOOK3HrquF32gm09deCQAFWCTjaf/view?usp=sharing">發球機組合圖-2.ttt</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/fvoF_d6DNsk" width="560"></iframe></p>
+<h2>第3版</h2>
+<p><marquee behavior="alternate" bgcolor="#B5B5B5" direction="right" scrollamount="1" width="350"><a href="/get_page/downloads/組合圖-3.stl">組合圖-3.stl</a>|<a href="/get_page/downloads/主體-3.stl">主體-3.stl</a>|<a href="/get_page/downloads/引球圓盤-3.stl">引球圓盤-3.stl</a>|<a href="/get_page/downloads/軸承.stl">軸承.stl</a></marquee></p>
+<p><a href="https://drive.google.com/file/d/17N-8ABgMcNleLfhRX5221DyTr4VL6H80/view?usp=sharing">發球機組合圖-3.ttt</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ghPPEBOKs_M" width="560"></iframe></p>
+<h2>第4版</h2>
+<p><marquee behavior="alternate" direction="down" height="35" scrollamount="1"><a href="/get_page/downloads/組合圖-5.stl">組合圖-5.stl</a>|<a href="/get_page/downloads/組合圖-4.stl">組合圖-4.stl</a>|<a href="/get_page/downloads/軸承-2.stl">軸承-2.stl</a></marquee></p>
+<p><a href="https://drive.google.com/file/d/1B8iossbDZBjO3TzLTAwdVh5GZbnrD1Vg/view?usp=sharing">發球機-4.ttt</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bHb0nsadlYw" width="560"></iframe></p>
