--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,10 +1,9 @@
 <h1>W1</h1>
 <p>1.建立倉儲</p>
 <p>2.尋找組員:</p>
-<p>40823125 <a href="https://github.com/40823125/cd2021">倉儲</a> <a href="https://40823125.github.io/cd2021/">網頁</a></p>
+<p>40823125<span> </span><a href="https://github.com/40823125/cd2021">倉儲</a><span> </span><a href="https://40823125.github.io/cd2021/">網頁</a></p>
 <p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
-<p>40823132<span> <a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<p></p>
+<p>40823132<span><span> </span><a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
 <h1>W2</h1>
 <p><strong>內容討論:</strong></p>
 <p><span>stage1-ag14 發球機</span></p>
@@ -13,35 +12,49 @@
 <p><strong>任務分配:</strong></p>
 <p>40823125:</p>
 <p><span>CoppeliaSim測試</span></p>
-<p><span>轉換為Inventor檔並組合<a href="/downloads/組合件.stl">組合件.stl</a>|<a href="/downloads/球體.stl">球體.stl</a>|<a href="/downloads/主體.stl">主體.stl</a>|<a href="/downloads/球桶.stl">球桶.stl</a>|<a href="/downloads/引球圓盤.stl">引球圓盤.stl</a></span></p>
+<p><span>轉換為Inventor檔並組合</span></p>
 <p>40823110:</p>
 <p>製圖(Onshape):<a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a>|<a href="https://cad.onshape.com/documents/5163181e2fe649a1d31dd674/w/4e88bfbfabd294ec7f2f2b4d/e/697be15fa1b7438b20521146">發球機主體</a>|<span><a href="https://cad.onshape.com/documents/e7f83d8dad44353fefca9ba8/w/c9bfde151271f69c6a6a2b1d/e/dfcfbb7a2da4266f925ff71c">球桶</a>|</span><span><a href="https://cad.onshape.com/documents/15e7b2b6610857fd978f626a/w/89c7066d9571d20450730429/e/4182c488ced799f50ceab2a3">引球圓盤</a></span></p>
 <p>40823132:</p>
 <p>PDF製作</p>
-<h2>發球機修改物件</h2>
-<p><a href="/downloads/引球圓盤-2.stl">引球圓盤-2.stl</a>|<a href="/downloads/發球機主體-2.stl">發球機主體-2.stl</a></p>
 <h2>零件尺寸及示意圖</h2>
 <h3>主體</h3>
-<p><img alt="" height="235" src="https://40823125.github.io/cd2021/images/%E4%B8%BB%E9%AB%94-4.png" width="350"/></p>
-<p><img alt="" height="300" src="https://40823125.github.io/cd2021/images/%E4%B8%BB%E9%AB%94-1.png" width="350"/></p>
-<p><img alt="" height="269" src="https://40823125.github.io/cd2021/images/%E4%B8%BB%E9%AB%94-2.png" width="350"/></p>
-<p><img alt="" height="246" src="https://40823125.github.io/cd2021/images/%E4%B8%BB%E9%AB%94-3.png" width="350"/></p>
+<p><img alt="" height="235" src="/images/主體-4.png" width="350"/></p>
+<p><img alt="" height="300" src="/images/主體-1.png" width="350"/></p>
+<p><img alt="" height="269" src="/images/主體-2.png" width="350"/></p>
+<p><img alt="" height="246" src="/images/主體-3.png" width="350"/></p>
 <h3>引球圓盤</h3>
-<p><img alt="" height="88" src="https://40823125.github.io/cd2021/images/%E5%BC%95%E7%90%83%E5%9C%93%E7%9B%A4-1.png" width="350"/></p>
-<p><img alt="" height="265" src="https://40823125.github.io/cd2021/images/%E5%BC%95%E7%90%83%E5%9C%93%E7%9B%A4-2.png" width="350"/></p>
-<p><img alt="" height="313" src="https://40823125.github.io/cd2021/images/%E5%BC%95%E7%90%83%E5%9C%93%E7%9B%A4-3.png" width="350"/></p>
+<p><img alt="" height="88" src="/images/引球圓盤-1.png" width="350"/></p>
+<p><img alt="" height="265" src="/images/引球圓盤-2.png" width="350"/></p>
+<p><img alt="" height="313" src="/images/引球圓盤-3.png" width="350"/></p>
 <h3>球桶</h3>
-<p><img alt="" height="254" src="https://40823125.github.io/cd2021/images/%E7%90%83%E6%A1%B6-1.png" width="350"/></p>
-<p><img alt="" height="322" src="https://40823125.github.io/cd2021/images/%E7%90%83%E6%A1%B6-2.png" width="350"/></p>
+<p><img alt="" height="254" src="/images/球桶-1.png" width="350"/></p>
+<p><img alt="" height="322" src="/images/球桶-2.png" width="350"/></p>
 <h3>球</h3>
-<p><img alt="" height="247" src="https://40823125.github.io/cd2021/images/%E7%90%83.png" width="250"/></p><h2>coppeliaSim模擬影片</h2>
-<p><a href="https://www.youtube.com/redirect?event=video_description&amp;redir_token=QUFFLUhqbjNiNFE5N0Z4RTJOY2x4TWhyVWZyeW1nbEV4Z3xBQ3Jtc0ttcVdXQUxYUUtiWHFrUXJLaVdCY05zRVNMdjhuZXdhVHlIVzFZYWMzNU4wc2xOamh4N2RDbFhZVWZqbGpUSnR6VmJYVkx3T0kwMTFZeUg0XzN4akV3S0hxYWg4TndRaEV6dzQxdXNFN1BreWpkeU1KVQ&amp;q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1RdYJgX-CONyUPgHzvj-qGBmiZoA7tIm9%2Fview%3Fusp%3Dsharing">發射滾輪測試</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/p66UvX3NPIU" width="560"></iframe></p><h2>CoppeliaSim測試時的問題</h2>
+<p><img alt="" height="247" src="/images/球.png" width="250"/></p>
+<h2>coppeliaSim模擬影片</h2>
+<p><a href="https://drive.google.com/file/d/1RdYJgX-CONyUPgHzvj-qGBmiZoA7tIm9/view?usp=sharing">發射滾輪測試</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/p66UvX3NPIU" width="560"></iframe></p>
+<h2>CoppeliaSim測試時的問題</h2>
 <p><strong>這個問題我有兩個猜測:</strong></p>
 <ol>
+<ol>
 <li><strong>我認為是因為主體的孔跟轉盤的軸接的太緊了，也許</strong><strong>只要把其中的一個修改的小一點就可以了</strong></li>
-<li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong><strong><strong></strong></strong></li>
+<li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong></li>
 </ol>
-<p><strong><a href="https://www.youtube.com/redirect?event=video_description&amp;redir_token=QUFFLUhqbnprQUw1QnFtYTNHZEZoQnd3U25BWG9CM0JpUXxBQ3Jtc0tuZFpWZUFycGFTeDVnNTNRa1ozekZJLU1JTy1NMjd0bUJteDBxSmh6VmdWQnJ6VmpWal84VjlRS0xWdk5fV3BuRUJ0cE1HRUthemN0bmdPbVZPNWFXX3dRUmIxb0UzdGxzdGhRaVE4WjdLMDZhSnNfaw&amp;q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1h-w_S60VLdSOlxDe9UeUbPbxfoGVpjHd%2Fview%3Fusp%3Dsharing">圓盤與主體的錯誤</a></strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560">
-<p></p></iframe><img alt="" height="267" src="/images/錯誤1.png" width="500"/></p><h1>分組開會紀錄</h1>
+</ol>
+<p><a href="https://drive.google.com/file/d/1h-w_S60VLdSOlxDe9UeUbPbxfoGVpjHd/view?usp=sharing">圓盤與主體的錯誤</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560"></iframe></p>
+<p><img alt="" height="267" src="/images/錯誤1.png" width="500"/></p>
+<h1>分組開會紀錄</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dLK8QT6gpw8" width="560"></iframe></p>
+<h1>發球機版本</h1>
+<h2>第1版</h2>
+<p><marquee behavior="alternate" bgcolor="#FF8CFF" direction="left" scrollamount="1" width="350"><a href="/get_page/downloads/組合件.stl">組合件.stl</a>|<a href="/get_page/downloads/球體.stl">球體.stl</a>|<a href="/get_page/downloads/主體.stl">主體.stl</a>|<a href="/get_page/downloads/球桶.stl">球桶.stl</a>|<a href="/get_page/downloads/引球圓盤.stl">引球圓盤.stl</a></marquee></p><h2>第2版</h2>
+<p><marquee behavior="alternate" bgcolor="#FF5959" direction="up" height="35" scrollamount="1.5" width="300"><a href="/get_page/downloads/組合圖-2.stl">組合圖-2.stl</a>|<a href="/get_page/downloads/發球機主體-2.stl">發球機主體-2.stl</a>|<a href="/get_page/downloads/引球圓盤-2.stl">引球圓盤-2.stl</a></marquee></p>
+<p><a href="https://drive.google.com/file/d/1GsmMkOOK3HrquF32gm09deCQAFWCTjaf/view?usp=sharing">發球機組合圖-2.ttt</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/fvoF_d6DNsk" width="560"></iframe></p>
+<h2>第3版</h2>
+<p><marquee behavior="alternate" bgcolor="#B5B5B5" direction="right" scrollamount="1" width="350"><a href="/get_page/downloads/組合圖-3.stl">組合圖-3.stl</a>|<a href="/get_page/downloads/主體-3.stl">主體-3.stl</a>|<a href="/get_page/downloads/引球圓盤-3.stl">引球圓盤-3.stl</a>|<a href="/get_page/downloads/軸承.stl">軸承.stl</a></marquee></p>
+<p><a href="https://drive.google.com/file/d/17N-8ABgMcNleLfhRX5221DyTr4VL6H80/view?usp=sharing">發球機組合圖-3.ttt</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ghPPEBOKs_M" width="560"></iframe></p>
