--- a/content/第3版.html
+++ b/content/第3版.html
@@ -133,8 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='主體.html'>Next</a> >> 主體<br /><h1>零件尺寸及示意圖</h1>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='主體.html'>Next</a> >> 主體</div>
+    <div id="tipue_search_content">第2版 << <a href='第2版.html'>Previous</a> <a href='第4版.html'>Next</a> >> 第4版<br /><h1>第3版</h1>
+<p><marquee behavior="alternate" bgcolor="#B5B5B5" direction="right" scrollamount="1" width="350"><a href="/get_page/downloads/組合圖-3.stl">組合圖-3.stl</a>|<a href="/get_page/downloads/主體-3.stl">主體-3.stl</a>|<a href="/get_page/downloads/引球圓盤-3.stl">引球圓盤-3.stl</a>|<a href="/get_page/downloads/軸承.stl">軸承.stl</a></marquee></p>
+<p><a href="https://drive.google.com/file/d/17N-8ABgMcNleLfhRX5221DyTr4VL6H80/view?usp=sharing">發球機組合圖-3.ttt</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ghPPEBOKs_M" width="560"></iframe></p>
+<br />第2版 << <a href='第2版.html'>Previous</a> <a href='第4版.html'>Next</a> >> 第4版</div>
         
     <!-- footer -->
       <div class="container">
