--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -35,7 +35,8 @@
 <p><img alt="" height="322" src="/images/球桶-2.png" width="350"/></p>
 <h3>球</h3>
 <p><img alt="" height="247" src="/images/球.png" width="250"/></p>
-<h1>發球機版本</h1>
+<h2>PDF</h2>
+<p><a href="/downloads/2021-協同產品設計實習-stage1-ag14.pdf">2021-協同產品設計實習-stage1-ag14.pdf</a></p><h1>發球機版本</h1>
 <h2>第1版</h2>
 <p><marquee behavior="alternate" bgcolor="#FF8CFF" direction="left" scrollamount="1" width="350"><a href="/downloads/組合件.stl">組合件.stl</a>|<a href="/downloads/球體.stl">球體.stl</a>|<a href="/downloads/主體.stl">主體.stl</a>|<a href="/downloads/球桶.stl">球桶.stl</a>|<a href="/downloads/引球圓盤.stl">引球圓盤.stl</a></marquee></p>
 <p><a href="https://drive.google.com/file/d/1RdYJgX-CONyUPgHzvj-qGBmiZoA7tIm9/view?usp=sharing">發射滾輪測試.ttt</a></p>
@@ -61,9 +62,21 @@
 <p><marquee behavior="alternate" bgcolor="#B5B5B5" direction="right" scrollamount="1" width="350"><a href="/downloads/組合圖-3.stl">組合圖-3.stl</a>|<a href="/downloads/主體-3.stl">主體-3.stl</a>|<a href="/downloads/引球圓盤-3.stl">引球圓盤-3.stl</a>|<a href="/downloads/軸承-3.stl">軸承-3.stl</a></marquee></p>
 <p><a href="https://drive.google.com/file/d/17N-8ABgMcNleLfhRX5221DyTr4VL6H80/view?usp=sharing">發球機組合圖-3.ttt</a></p>
 <p>我們將引球圓盤跟轉軸分開後，<span>引球圓盤就可以正常轉動了，不過軸太短了導致引球圓盤跟主體的發球孔會卡住，只要將軸加長就可以解決</span></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ghPPEBOKs_M" width="560"></iframe></p><h2>第4版</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ghPPEBOKs_M" width="560"></iframe></p>
+<h2>第4版</h2>
 <p><marquee behavior="alternate" direction="down" height="35" scrollamount="1"><a href="/downloads/組合圖-4.stl">組合圖-4.stl</a>|<a href="/downloads/軸承-4.stl">軸承-4.stl</a></marquee></p>
 <p><a href="https://drive.google.com/file/d/1B8iossbDZBjO3TzLTAwdVh5GZbnrD1Vg/view?usp=sharing">發球機-4.ttt</a></p>
+<p><a href="https://drive.google.com/file/d/1qfLpAu2GxdC1gHiTFI4z8q3CFVKeD7Fy/view?usp=sharing">發球機-4-1.ttt</a></p>
 <p>我們將軸加長後，引球圓盤就可以正常轉動了</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bHb0nsadlYw" width="560"></iframe></p><h2>第5版</h2><h1>分組開會紀錄</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bHb0nsadlYw" width="560"></iframe></p>
+<p>但是在要將球完整的引導至發球機的軌道裡，會不斷跳動</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ifhj4b9HIeQ" width="560"></iframe></p>
+<h2>第5版</h2>
+<p><marquee behavior="alternate" direction="down" height="35" scrollamount="1"><a href="/downloads/組合圖-5.stl">組合圖-5.stl</a>|<a href="/downloads/主體-5.stl">主體-5.stl</a>|<a href="/downloads/軸承-5.stl">軸承-5.stl</a></marquee></p>
+<p><a href="https://drive.google.com/file/d/1V4W0suvDG40gUcVhBzYq3oN-ISx5U4qV/view?usp=sharing">發球機-5.ttt</a></p>
+<p>我們將發球機的軌道移到後面，不過跟第4個版本一樣球和圓盤無法將球正確的引至發球軌道上</p>
+<p>我認為是球、圓盤、球桶的設定沒有設定好</p>
+<p><img alt="" height="328" src="/images/主體第2版.png" width="500"/></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/NF6CfldrYS0" width="560"></iframe></p>
+<h1>分組開會紀錄</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dLK8QT6gpw8" width="560"></iframe></p>
