--- a/content/W4.html
+++ b/content/W4.html
@@ -133,8 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W4 << <a href='W4.html'>Previous</a> <a href='第1版.html'>Next</a> >> 第1版<br /><h1>發球機版本</h1>
-<br />W4 << <a href='W4.html'>Previous</a> <a href='第1版.html'>Next</a> >> 第1版</div>
+    <div id="tipue_search_content">PDF << <a href='PDF.html'>Previous</a> <a href='發球機版本.html'>Next</a> >> 發球機版本<br /><h1>W4</h1>
+<p><a href="./../downloads/2021-03_2a_stage.7z">2021-03_2a_stage.7z</a></p>
+<p><a href="./../downloads/Ant Renamer.7z">Ant Renamer.7z</a></p><br />PDF << <a href='PDF.html'>Previous</a> <a href='發球機版本.html'>Next</a> >> 發球機版本</div>
         
     <!-- footer -->
       <div class="container">
