--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -570,7 +570,7 @@ for i in range(6):
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
 <p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
 <h2>W13</h2><h3>gogs操作</h3>
-<p>倉儲:<a href="https://fossil.kmol.info:3443/40823125/cd2021">https://fossil.kmol.info:3443/40823125/cd2021</a></p>
+<p><a href="https://fossil.kmol.info:3443/40823125/cd2021">倉儲</a></p>
 <p>1.先用<a href="https://fossil.kmol.info:3443">https://fossil.kmol.info:3443</a>創新倉儲，與github倉儲相同的名稱</p>
 <p><img alt="" height="257" src="/images/螢幕擷取畫面 2021-06-03 154013.jpg" width="500"/></p>
 <p><img alt="" height="389" src="/images/螢幕擷取畫面 2021-06-03 154052.jpg" width="500"/></p>
@@ -771,7 +771,7 @@ fossil addremove
 <h3>建立 CoppeliaSim 4.1.0 MTB robot 場景</h3>
 <p>使用老師w15的鍵盤控制，使自己組裝完的MTB_robot可以鍵盤控制。並利用 Leo Editor 以 require 導入 Lua 程式運作</p>
 <p><a href="https://github.com/mdecourse/cd2021/tree/main/downloads/stage3/MTB_robot">老師的leo</a></p>
-<p><a href="https://drive.google.com/file/d/1zk2AiK_IjJdSPRHD9k4WU-Mr8kNH6IoJ/view?usp=sharing">W16_exam_MTB_robot keyboard.7z</a></p>
+<p><a href="https://drive.google.com/drive/folders/1VWDxUu-VKp-6mEiPEr7DPKjhrJr-I-XJ?usp=sharing">W16_exam_MTB_robot keyboard.7z</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wPo3JFRofF0" width="560"></iframe></p>
 <p><strong>Lua 程式:</strong></p>
 <pre class="brush:lua;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init()
@@ -844,7 +844,7 @@ end
  
 </pre><h3>手臂末端加入 components-gripper-suction pad 吸盤</h3>
 <p>接續MTB Robot keyboard, 在其抓物品的桿件上加suction pad</p>
-<p><a href="https://drive.google.com/file/d/18g-diZcB7OOce-bCbxj5UJYWtZ2a4Aq_/view?usp=sharing">W16_exam_MTB_robot keyboard add suction pad.7z</a></p>
+<p><a href="https://drive.google.com/drive/folders/1I_AHD8rA2dkTjoYJJMQ9-3z67BkWpDSG?usp=sharing">W16_exam_MTB_robot keyboard add suction pad.7z</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3bXMnqghFik" width="560"></iframe></p>
 <p><strong>Lua程式:</strong></p>
 <pre class="brush:lua;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init()
@@ -925,7 +925,7 @@ end
 </pre>
 <p></p><h3>逆向運動學函式</h3>
 <p><span>使用老師的逆運動學函式求出終點位置的位移，使MTB_robot在coppeliasim裡可以順利達到老師要求的位置</span></p>
-<p><span><a href="https://drive.google.com/file/d/18gWlnhcRQj3uRjgt2QCEbnUu60jNp4Sr/view?usp=sharing">MTB_force mode.7z</a></span></p>
+<p><span><a href="https://drive.google.com/drive/folders/1zH_gJ80H0cogA9vhOeLMLPEpFBAcmGlm?usp=sharing">MTB_force mode.7z</a></span></p>
 <p><strong>第一版:</strong></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J0m9TPJ3oR8" width="560"></iframe></span></p>
 <p><strong>第二版:</strong></p>
