--- a/content/協同流程圖.html
+++ b/content/協同流程圖.html
@@ -133,8 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">分組開會紀錄 << <a href='分組開會紀錄.html'>Previous</a> <a href='PDF.html'>Next</a> >> PDF<br /><h1>W4</h1>
-<br />分組開會紀錄 << <a href='分組開會紀錄.html'>Previous</a> <a href='PDF.html'>Next</a> >> PDF</div>
+    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <br /><h1>協同流程圖</h1>
+<p><img alt="" height="425" src="./../images/Untitled Diagram(1).png" width="500"/></p>
+<p></p></div></div></div></div><br />W18 << <a href='W18.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
