--- a/content/W18.html
+++ b/content/W18.html
@@ -134,9 +134,22 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Python remote API 逆向運動學函式 << <a href='Python remote API 逆向運動學函式.html'>Previous</a> <a href='Collaborative flowchart.html'>Next</a> >> Collaborative flowchart<br /><h1>W18</h1>
-<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing">籃球機 sensor</a></p>
-<p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing">final Basketball-Machine</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/x4-fqzVcYUA" width="560"></iframe></p><br />Python remote API 逆向運動學函式 << <a href='Python remote API 逆向運動學函式.html'>Previous</a> <a href='Collaborative flowchart.html'>Next</a> >> Collaborative flowchart</div>
+<p>senser file link</p>
+<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine3.1.png" width="315"/></a></p>
+<p>完成品:</p>
+<p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing" title="Basketball machine 3.1"><img alt="" height="76" src="https://40823125.github.io/stage3-ag6/images/Basketball machine3.5.png" width="314"/></a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/x4-fqzVcYUA" width="560"></iframe></p>
+<p>這是紅球的內部狀況</p>
+<p><img alt="" height="238" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine senser3.1-5.png" width="400"/></p>
+<p>裡面放一顆較小的綠球，因為紅球太大顆會導致感測器失靈，所以讓感測器去感測綠球就不會有這個問題</p>
+<p><img alt="" height="208" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine senser3.1-6.png" width="400"/></p>
+<p>感測器放了四根，呈現八角形讓感測器可以比較容易感測球</p>
+<p><img alt="" height="198" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine3.1-1.png" width="400"/></p>
+<p>當綠球觸碰到res、res0、res1抑或是res2</p>
+<p>那麼就會顯示1分</p>
+<p><img alt="" height="509" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine senser3.1-3.png" width="600"/></p>
+<p>這段程式是為了在製作感測器時能夠方便檢測，所以讓球重生再籃框上的位置</p>
+<p><img alt="" height="490" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine senser3.1-2.png" width="600"/></p><br />Python remote API 逆向運動學函式 << <a href='Python remote API 逆向運動學函式.html'>Previous</a> <a href='Collaborative flowchart.html'>Next</a> >> Collaborative flowchart</div>
         
     <!-- footer -->
       <div class="container">
